@@ -37,22 +37,20 @@ public class WebSecurityConfig {
    */
   @Bean
   public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-    http
-      .headers(headers -> headers
-          .frameOptions(frameOptions -> frameOptions.deny())
-          .contentSecurityPolicy(csp -> csp.policyDirectives("frame-ancestors 'none';")))
-      .securityMatcher("/api/**")
-      // CSRF トークンを利用したリクエストの検証を無効化（ OAuth2.0 による認証認可を利用する前提のため）
-      // OAuth2.0 によるリクエストの検証を利用しない場合は、有効化して CSRF 対策を施す
-      .csrf(csrf -> csrf.ignoringRequestMatchers("/api/**"))
-      .cors(cors -> cors.configurationSource(request -> {
-        CorsConfiguration conf = new CorsConfiguration();
-        conf.setAllowCredentials(true);
-        conf.setAllowedOrigins(Arrays.asList(allowedOrigins));
-        conf.setAllowedMethods(List.of("GET", "HEAD", "POST", "PUT", "DELETE", "OPTIONS"));
-        conf.setAllowedHeaders(List.of("*"));
-        return conf;
-      })).anonymous(anon -> anon.disable());
+    http.headers(headers -> headers.frameOptions(frameOptions -> frameOptions.deny())
+        .contentSecurityPolicy(csp -> csp.policyDirectives("frame-ancestors 'none';")))
+        .securityMatcher("/api/**")
+        // CSRF トークンを利用したリクエストの検証を無効化（ OAuth2.0 による認証認可を利用する前提のため）
+        // OAuth2.0 によるリクエストの検証を利用しない場合は、有効化して CSRF 対策を施す
+        .csrf(csrf -> csrf.ignoringRequestMatchers("/api/**"))
+        .cors(cors -> cors.configurationSource(request -> {
+          CorsConfiguration conf = new CorsConfiguration();
+          conf.setAllowCredentials(true);
+          conf.setAllowedOrigins(Arrays.asList(allowedOrigins));
+          conf.setAllowedMethods(List.of("GET", "HEAD", "POST", "PUT", "DELETE", "OPTIONS"));
+          conf.setAllowedHeaders(List.of("*"));
+          return conf;
+        })).anonymous(anon -> anon.disable());
 
     // 開発環境においてはダミーユーザを注入する
     if (dummyUserInjectionFilter != null) {
